# rpa-harness

./: .gitignore  AGENTS.md  PLAN.md  SKILL.md  conftest.py  main.py  pyproject.toml  requirements.txt
.autoresearch/: autoresearch.checks.sh  autoresearch.config.json  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  autoresearch.supervisor.json  autoresearch_dashboard.html  codex_prompt.md
config/: default.yaml
docs/: architecture.md  browser_selector_swarm_plan.md  claude_mem_hard_replacement_plan.md  continuous_autoresearch_improvement_plan.md  credential_policy.md  failure_report_schema.md  memory_policy.md  mutation_protocol.md  rpa_capability_test_plan.md  telegram_notifications.md  verification_contract.md  workflow_spec.md
harness/: __init__.py  config.py  logger.py  orchestrator.py  security.py  test_case.py
scripts/: bootstrap_playwright.py
subagents/: __init__.py  base.py  explorer.py  planner.py  selector.py
tests/: test_artifact_hygiene.py  test_autoresearch_runner.py  test_autoresearch_supervisor.py  test_bot_notifications.py  test_browser_selector_swarm.py  test_config.py  test_memory.py  test_ota_link_swarm_from_excel.py  test_ota_recent_reviews_from_excel.py  test_planner.py  test_repair_loop.py  test_retry.py  test_search_to_rpa_workflow_skill.py  test_security.py  test_selector_strategy.py  test_telegram_notifications.py  test_tool_memory_recording.py  test_trip_com_reviews_from_excel.py  test_trip_marmara_taksim_reviews.py  test_tripadvisor_review_parser.py  test_verification.py  test_workflow_schema.py  (+1 more)
(+112 files in other folders)
